--- a/docker/conf/phalcon-landing.conf
+++ b/docker/conf/phalcon-landing.conf
@@ -1,10 +1,13 @@
 server {
-    listen        80;
+    listen        81;
     server_tokens off;
     server_name localhost;
 
     client_max_body_size 128M;
     charset       utf-8;
+
+    access_log    /var/log/nginx/landing-access.log main buffer=50k;
+    error_log     /var/log/nginx/landing-error.log;
 
     set           $index  "index.php";
 
@@ -33,5 +36,21 @@ server {
         fastcgi_param  PATH_INFO        $fastcgi_path_info;
         fastcgi_param  HTTP_REFERER     $http_referer;
         include fastcgi_params;
+    }
+
+    location ~* \.(js|css|less|png|jpg|jpeg|gif|ico|woff|ttf|svg|tpl)$ {
+        expires 24h;
+        access_log off;
+    }
+
+    location = /favicon.ico {
+        log_not_found off;
+        access_log off;
+    }
+
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
     }
 }
