--- a/docker/conf/phalcon-activity.conf
+++ b/docker/conf/phalcon-activity.conf
@@ -1,9 +1,12 @@
 server {
-    listen        81;
+    listen        80;
     server_tokens off;
 
     client_max_body_size 128M;
     charset       utf-8;
+
+    access_log    /var/log/nginx/landing-access.log main buffer=50k;
+    error_log     /var/log/nginx/landing-error.log;
 
     set           $index  "index.php";
 
@@ -34,4 +37,19 @@ server {
         include fastcgi_params;
     }
 
+    location ~* \.(js|css|less|png|jpg|jpeg|gif|ico|woff|ttf|svg|tpl)$ {
+        expires 24h;
+        access_log off;
+    }
+
+    location = /favicon.ico {
+        log_not_found off;
+        access_log off;
+    }
+
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
 }
