--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -28,6 +28,8 @@ services:
       - ../phalcon-activity:/var/www/myapp
     depends_on:
       - phalcon-activity
+    ports:
+      - "8080:80"
 
   phalcon-activity:
     build: .
